--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,33 +15,46 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <android.support.v4.widget.Space
-            android:layout_width="match_parent"
-            android:layout_height="30dp" />
-
-        <ImageView
-            android:paddingTop="10dp"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            android:id="@+id/icon"
-            android:contentDescription="@string/desc_firebase_lockup"
-            android:src="@drawable/icon6"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
-
-        <android.support.v4.widget.Space
-            android:layout_width="match_parent"
-            android:layout_height="100dp" />
-
-
+       <android.support.v4.widget.Space
+           android:layout_width="match_parent"
+           android:layout_height="40dp" />
         <TextView
             android:padding="5dp"
             android:id="@+id/status"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textColor="@color/colorPrimaryDark"
-            android:text="@string/signed_out" />
+            android:text="AROUND THE WORLD"
+            android:textStyle="bold"/>
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imageView"
+            android:layout_marginLeft="3dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/icon6"
+            app:civ_border_width="0dp"
+            app:civ_border_color="#FF000000"/>
+
+
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="80dp" />
+
+
+
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+
+
 
 
 
@@ -53,22 +66,20 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#ffffff">
+       >
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/button_facebook_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
-
-        <Button
-            android:id="@+id/button_facebook_signout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="230dp"
+            android:layout_height="100dp"
             android:layout_centerInParent="true"
-            android:text="Sign Out"
-            android:background="#bbbb"
-            android:visibility="gone"/>
+            android:textStyle="normal"
+            android:background="@drawable/button"
+            android:shadowRadius="1.2"
+            android:gravity="center"
+            android:text="Login With Facebook"
+            android:textSize="15dp"/>
+
 
     </RelativeLayout>
 
