--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -9,11 +9,27 @@
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
-        android:layout_height="45dp"
+        android:layout_height="56dp"
         android:id="@+id/t">
 
-    </android.support.v7.widget.Toolbar>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/hamburger"
+            android:id="@+id/ham"/>
 
+        <TextView
+            android:layout_width="100dp"
+
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="News"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:layout_marginLeft="30dp"
+            />
+
+    </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
