--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,15 +30,15 @@
             android:textStyle="bold"/>
         <android.support.v4.widget.Space
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="40dp" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/imageView"
             android:layout_marginLeft="3dp"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="210dp"
+            android:layout_height="210dp"
             android:src="@drawable/icon6"
             app:civ_border_width="0dp"
             app:civ_border_color="#FF000000"/>
@@ -70,15 +70,16 @@
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/button_facebook_login"
-            android:layout_width="230dp"
-            android:layout_height="100dp"
+            android:layout_width="270dp"
+            android:layout_height="200dp"
+            android:height="40dp"
             android:layout_centerInParent="true"
             android:textStyle="normal"
             android:background="@drawable/button"
             android:shadowRadius="1.2"
             android:gravity="center"
             android:text="Login With Facebook"
-            android:textSize="15dp"/>
+            android:textSize="18dp"/>
 
 
     </RelativeLayout>
