--- a/app/src/main/res/layout/news_model1.xml
+++ b/app/src/main/res/layout/news_model1.xml
@@ -84,6 +84,7 @@
                <ImageView
                    android:layout_width="30dp"
                     android:layout_marginBottom="0dp"
+                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/button"/>
