--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -25,6 +25,16 @@
         android:textColor="#ffffff"
         android:layout_marginLeft="5dp"
         />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="15dp"
+            android:clickable="true"
+           android:buttonTint="#ffffff"
+            android:id="@+id/checkbox"
+            />
    </android.support.v7.widget.Toolbar>
 <LinearLayout
     android:layout_width="match_parent"
