--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
             android:layout_marginLeft="3dp"
             android:layout_width="210dp"
             android:layout_height="210dp"
-            android:src="@drawable/icon6"
+            android:src="@drawable/newspaper1"
             app:civ_border_width="0dp"
             app:civ_border_color="#FF000000"/>
 
